--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DocumentOrderConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=DocumentOrder"
+  },
   "AllowedHosts": "*"
 }
