incorporated review comments

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DocumentOrderConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=DocumentOrder"
+    "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking"
   },
   "AllowedHosts": "*"
 }
