--- a/book-a-reading-room-visit.web/appsettings.json
+++ b/book-a-reading-room-visit.web/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "book-a-visit-api": "https://localhost:44321/",
   "AllowedHosts": "*"
 }
