--- a/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
+++ b/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Content Remove="Views\Shared\_Breadcrumb.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\book-a-reading-room-visit.domain\book-a-reading-room-visit.domain.csproj" />
+  </ItemGroup>
 </Project>
