Added route directory for the application and update the url with controller and action based url.

--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54606",
+      "applicationUrl": "http://localhost:54606/book-a-reading-room-visit",
       "sslPort": 44397
     }
   },
