--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking"
   },
+  "BookingTimeLine": {
+    //in number of working days
+    "AvailabilityFrom": 5,
+    "AvailabilityDatesToShow": 20
+  },
   "AllowedHosts": "*"
 }
