--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "KBS_WebApi_URL": "https://localhost:44321/"
       }
     },
     "book_a_reading_room_visit.web": {
