Added bank-holiday integration

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -12,7 +12,8 @@
   "BookingTimeLine": {
     //in number of working days
     "AvailabilityFrom": 5,
-    "AvailabilityDatesToShow": 20
+    "StandardAvailabilityDatesToShow": 20,
+    "BulkAvailabilityDatesToShow": 8
   },
   "AllowedHosts": "*"
 }
