--- a/book-a-reading-room-visit.api/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.api/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "RecordCopying_WebApi_URL": "http://services.nationalarchives.web.local/RecordCopyingServiceAPI/"
       }
     },
     "book_a_reading_room_visit.api": {
@@ -24,7 +25,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5050;http://localhost:5051",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "RecordCopying_WebApi_URL": "http://services.nationalarchives.web.local/RecordCopyingServiceAPI/"
       }
     }
   }
