--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KBS_WebApi_URL": "https://localhost:44321/",
+        "KBS_WebApi_URL": "https://localhost:44321/book-a-visit-api/",
         "KBS_Root_Path": "/book-a-reading-room-visit"
       }
     },
@@ -24,7 +24,7 @@
       "applicationUrl": "https://localhost:5052;http://localhost:5053",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KBS_WebApi_URL": "https://localhost:5050/",
+        "KBS_WebApi_URL": "https://localhost:5050/book-a-visit-api/",
         "KBS_Root_Path": "/book-a-reading-room-visit"
       }
     }
