--- a/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
+++ b/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
@@ -14,6 +14,10 @@
     <Content Remove="Views\Shared\_Breadcrumb.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.0.0" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.1.56" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\book-a-reading-room-visit.domain\book-a-reading-room-visit.domain.csproj" />
   </ItemGroup>
 </Project>
