--- a/book-a-reading-room-visit.api/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.api/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "RecordCopying_WebApi_URL": "http://services.nationalarchives.web.local/RecordCopyingServiceAPI/"
+        "RecordCopying_WebApi_URL": "http://10.112.120.42/RecordCopyingServiceAPI/",
+        "RecordCopying_Header": "services.nationalarchives.web.local"
       }
     },
     "book_a_reading_room_visit.api": {
@@ -26,7 +27,8 @@
       "applicationUrl": "https://localhost:5050;http://localhost:5051",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "RecordCopying_WebApi_URL": "http://services.nationalarchives.web.local/RecordCopyingServiceAPI/"
+        "RecordCopying_WebApi_URL": "http://10.112.120.42/RecordCopyingServiceAPI/",
+        "RecordCopying_Header": "services.nationalarchives.web.local"
       }
     }
   }
