--- a/book-a-reading-room-visit.web/appsettings.json
+++ b/book-a-reading-room-visit.web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Services": {
+    "AdvanceServiceEndPoint": "http://test.services.nationalarchives.web.local/AdvancedOrderService/AdvancedOrderService.svc"
+  }
 }
