--- a/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
+++ b/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Shared\_Breadcrumb.cshtml" />
+    <Content Remove="wwwroot\js\cookie-banner.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.0.0" />
@@ -21,5 +22,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\book-a-reading-room-visit.domain\book-a-reading-room-visit.domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\js\cookie-banner.js" />
   </ItemGroup>
 </Project>
