connection string and service end-point moved from app-settings to launchsettings as environment variable

--- a/book-a-reading-room-visit.api/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.api/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "RecordCopying_WebApi_URL": "http://10.112.120.42/RecordCopyingServiceAPI/",
-        "RecordCopying_Header": "services.nationalarchives.web.local"
+        "RecordCopying_Header": "services.nationalarchives.web.local",
+        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking"
       }
     },
     "book_a_reading_room_visit.api": {
@@ -28,7 +29,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "RecordCopying_WebApi_URL": "http://10.112.120.42/RecordCopyingServiceAPI/",
-        "RecordCopying_Header": "services.nationalarchives.web.local"
+        "RecordCopying_Header": "services.nationalarchives.web.local",
+        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking"
       }
     }
   }
