--- a/book-a-reading-room-visit.web/appsettings.json
+++ b/book-a-reading-room-visit.web/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Services": {
-    "AdvanceServiceEndPoint": "http://test.services.nationalarchives.web.local/AdvancedOrderService/AdvancedOrderService.svc"
-  }
+  "AllowedHosts": "*"
 }
