--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "KBS_WebApi_URL": "https://localhost:44321/book-a-visit-api/",
-        "KBS_Root_Path": "/book-a-reading-room-visit"
+        "KBS_Root_Path": "/book-a-reading-room-visit",
+        "AdvanceOrderServiceEndPoint": "http://172.31.2.125/AdvancedOrderService/AdvancedOrderService.svc"
       }
     },
     "book_a_reading_room_visit.web": {
@@ -25,7 +26,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "KBS_WebApi_URL": "https://localhost:5050/book-a-visit-api/",
-        "KBS_Root_Path": "/book-a-reading-room-visit"
+        "KBS_Root_Path": "/book-a-reading-room-visit",
+        "AdvanceOrderServiceEndPoint": "http://172.31.2.125/AdvancedOrderService/AdvancedOrderService.svc"
       }
     }
   }
