Add reader detail form included .net standard 2.0 class library

--- a/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
+++ b/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\book-a-reading-room-visit.data\book-a-reading-room-visit.data.csproj" />
     <ProjectReference Include="..\book-a-reading-room-visit.domain\book-a-reading-room-visit.domain.csproj" />
+    <ProjectReference Include="..\book-a-reading-room-visit.model\book-a-reading-room-visit.model.csproj" />
   </ItemGroup>
 
 </Project>
