--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -9,6 +9,7 @@
   "BookingTimeLine": {
     //in number of working days
     "AvailabilityFrom": 5,
+    "CompleteBy": 5,
     "StandardAvailabilityDatesToShow": 20,
     "BulkAvailabilityDatesToShow": 8
   },
