--- a/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
+++ b/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\book-a-reading-room-visit.domain\book-a-reading-room-visit.domain.csproj" />
+    <ProjectReference Include="..\book-a-reading-room-visit.model\book-a-reading-room-visit.model.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\js\cookie-banner.js" />
