cache expiration updated

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -8,8 +8,7 @@
   },
   "BookingTimeLine": {
     //in number of working days
-    "AvailabilityFrom": 5,
-    "CompleteBy": 4,
+    "DocumentsPreparationDays": 4,
     "StandardAvailabilityDatesToShow": 20,
     "BulkAvailabilityDatesToShow": 8
   },
