--- a/book-a-reading-room-visit.model/book-a-reading-room-visit.model.csproj
+++ b/book-a-reading-room-visit.model/book-a-reading-room-visit.model.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,10 +7,10 @@
     <Product>ds-book-a-reading-room-visit.model</Product>
     <Company>The National Archives</Company>
     <Authors>The National Archives</Authors>
-    <Version>1.3.0</Version>
+    <Version>1.4.0</Version>
     <RepositoryUrl>https://github.com/nationalarchives/ds-book-a-reading-room-visit</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
   </PropertyGroup>
 
 </Project>
