--- a/book-a-reading-room-visit.model/book-a-reading-room-visit.model.csproj
+++ b/book-a-reading-room-visit.model/book-a-reading-room-visit.model.csproj
@@ -7,10 +7,11 @@
     <Product>ds-book-a-reading-room-visit.model</Product>
     <Company>The National Archives</Company>
     <Authors>The National Archives</Authors>
-    <Version>1.4.0</Version>
+    <Version>1.5.0</Version>
     <RepositoryUrl>https://github.com/nationalarchives/ds-book-a-reading-room-visit</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+    <AssemblyVersion>1.5.0.0</AssemblyVersion>
+    <FileVersion>1.5.0.0</FileVersion>
   </PropertyGroup>
 
 </Project>
