--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -14,6 +14,7 @@ FROM build AS publish
 RUN dotnet publish "book-a-reading-room-visit.web.csproj" -c Release -o /app/publish
 
 FROM base AS final
+RUN apk add tzdata
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "book-a-reading-room-visit.web.dll"]
