--- a/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
+++ b/book-a-reading-room-visit.api/book-a-reading-room-visit.api.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.0.0" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.1.56" />
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.5.0.75" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
