Reservation confirmation email added

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -12,5 +12,13 @@
     "StandardAvailabilityDatesToShow": 20,
     "BulkAvailabilityDatesToShow": 8
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "FromAddress": "The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
+    "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
+    "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
+    "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
+    "ReservationSubject": "Reservation for {0}",
+    "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed"
+  }
 }
