Error handled and logged to cloudwatch

--- a/book-a-reading-room-visit.api/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "RecordCopying_WebApi_URL": "http://10.112.120.42/RecordCopyingServiceAPI/",
         "RecordCopying_Header": "services.nationalarchives.web.local",
-        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking",
+        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking1",
         "HomeURL": "https://dev-www.nationalarchives.gov.uk/book-a-reading-room-visit"
       }
     },
@@ -31,7 +31,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "RecordCopying_WebApi_URL": "http://10.112.120.42/RecordCopyingServiceAPI/",
         "RecordCopying_Header": "services.nationalarchives.web.local",
-        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking",
+        "KewBookingConnection": "Data Source= (localdb)\\MSSQLLocalDB; Initial Catalog=KewBooking1",
         "HomeURL": "https://dev-www.nationalarchives.gov.uk/book-a-reading-room-visit"
       }
     }
