--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -1,9 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning",
+      "System": "Warning",
+      "Microsoft": "Warning"
+    },
+    "Console": {
+      "IncludeScopes": false
     }
   },
   "BookingTimeLine": {
@@ -20,5 +23,9 @@
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "ReservationSubject": "Reservation for {0}",
     "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed"
+  },
+  "AWS.Logging": {
+    "LogGroup": "KBS-API",
+    "Region": "eu-west-2"
   }
 }
