--- a/book-a-reading-room-visit.web/appsettings.json
+++ b/book-a-reading-room-visit.web/appsettings.json
@@ -1,14 +1,21 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning",
+      "System": "Warning",
+      "Microsoft": "Warning"
+    },
+    "Console": {
+      "IncludeScopes": false
     }
   },
   "AllowedHosts": "*",
   "Booking": {
     //in minutes
     "ProvisionalElapsedTime": 20
+  },
+  "AWS.Logging": {
+    "LogGroup": "KBS-Web",
+    "Region": "eu-west-2"
   }
 }
