--- a/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
+++ b/book-a-reading-room-visit.web/book-a-reading-room-visit.web.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.0.0" />
+    <PackageReference Include="AWS.Logger.AspNetCore" Version="3.0.0" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.5.1.56" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.1" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.1" />
