included reader ticket validation based on the order limit made it configurable for testing purpose

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -13,7 +13,9 @@
     //in number of working days
     "DocumentsPreparationDays": 4,
     "StandardAvailabilityDatesToShow": 20,
-    "BulkAvailabilityDatesToShow": 8
+    "BulkAvailabilityDatesToShow": 8,
+    "OrderLimitPerReaderTicket": 2,
+    "OrderLimitDuration": 28
   },
   "AllowedHosts": "*",
   "EmailSettings": {
