--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -18,7 +18,8 @@
         "AdvanceOrderServiceEndPoint": "http://172.31.2.125/AdvancedOrderService/AdvancedOrderService.svc",
         "BulkOrderServiceEndPoint": "http://172.31.2.125/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
-        "TimeZone": "GMT Standard Time"
+        "TimeZone": "GMT Standard Time",
+        "EnforceOrderLimit": "false"
       }
     },
     "book_a_reading_room_visit.web": {
@@ -33,7 +34,8 @@
         "AdvanceOrderServiceEndPoint": "http://172.31.2.125/AdvancedOrderService/AdvancedOrderService.svc",
         "BulkOrderServiceEndPoint": "http://172.31.2.125/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
-        "TimeZone": "GMT Standard Time"
+        "TimeZone": "GMT Standard Time",
+        "EnforceOrderLimit": "false"
       }
     }
   }
