Text based email implemntation and tests

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -29,5 +29,9 @@
   "AWS.Logging": {
     "LogGroup": "KBS-API",
     "Region": "eu-west-2"
+  },
+  "AWS": {
+    "Profile": "devds",
+    "Region": "eu-west-1"
   }
 }
