--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -24,7 +24,10 @@
     "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "ReservationSubject": "Reservation for {0}",
-    "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed"
+    "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
+    "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
+    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
+    "AutoCancelSubject": "Cancelled: Your visit to view documents at The National Archives"
   },
   "AWS.Logging": {
     "LogGroup": "KBS-API",
