Available dates updated AWS oackages updated

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -32,5 +32,9 @@
   "AWS.Logging": {
     "LogGroup": "KBS-API",
     "Region": "eu-west-2"
+  },
+  "AWS": {
+    "Profile": "devdsadmin",
+    "Region": "eu-west-2"
   }
 }
