--- a/book-a-reading-room-visit.web/appsettings.json
+++ b/book-a-reading-room-visit.web/appsettings.json
@@ -17,5 +17,9 @@
   "AWS.Logging": {
     "LogGroup": "KBS-Web",
     "Region": "eu-west-2"
+  },
+  "AWS": {
+    "Profile": "devdsadmin",
+    "Region": "eu-west-2"
   }
 }
