Updated the config and added series validation

--- a/book-a-reading-room-visit.web/appsettings.json
+++ b/book-a-reading-room-visit.web/appsettings.json
@@ -1,21 +1,23 @@
 {
   "Logging": {
+    "Region": "eu-west-2",
+    "LogGroup": "KBS-Web",
+    "IncludeLogLevel": true,
+    "IncludeCategory": true,
+    "IncludeNewline": true,
+    "IncludeException": true,
+    "IncludeEventId": false,
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning",
-      "System": "Warning",
-      "Microsoft": "Warning"
-    },
-    "Console": {
-      "IncludeScopes": false
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
   "Booking": {
     //in minutes
-    "ProvisionalElapsedTime": 20
-  },
-  "AWS.Logging": {
-    "LogGroup": "KBS-Web",
-    "Region": "eu-west-2"
+    "ProvisionalElapsedTime": 20,
+    "NotOrderableSeries": "BT 42,BT 43,BT 50,BT 52,C 13,C 14,E 112,KB 122,PROB 4,WO 416"
   }
 }
