--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -1,12 +1,17 @@
 {
   "Logging": {
+    "Region": "eu-west-2",
+    "LogGroup": "KBS-Web",
+    "IncludeLogLevel": true,
+    "IncludeCategory": true,
+    "IncludeNewline": true,
+    "IncludeException": true,
+    "IncludeEventId": false,
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning",
-      "System": "Warning",
-      "Microsoft": "Warning"
-    },
-    "Console": {
-      "IncludeScopes": false
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "BookingTimeLine": {
@@ -19,18 +24,14 @@
   },
   "AllowedHosts": "*",
   "EmailSettings": {
-    "FromAddress": "The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
-    "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
+    "AutoCancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
-    "ReservationSubject": "Reservation for {0}",
     "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
+    "FromAddress": "The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
-    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
-    "AutoCancelSubject": "Cancelled: Your visit to view documents at The National Archives"
-  },
-  "AWS.Logging": {
-    "LogGroup": "KBS-API",
-    "Region": "eu-west-2"
+    "ReservationSubject": "Reservation for {0}",
+    "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
+    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order"
   }
 }
