--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -19,7 +19,9 @@
         "BulkOrderServiceEndPoint": "http://172.31.2.125/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
-        "EnforceOrderLimit": "false"
+        "EnforceOrderLimit": "false",
+        "AWS_PROFILE": "devdsadmin",
+        "AWS_REGION": "eu-west-2"
       }
     },
     "book_a_reading_room_visit.web": {
@@ -35,7 +37,9 @@
         "BulkOrderServiceEndPoint": "http://172.31.2.125/BulkOrdersService/BulkOrdersService.svc",
         "ReaderRegisterURL": "https://test-secure.nationalarchives.gov.uk/login/reader-register",
         "TimeZone": "GMT Standard Time",
-        "EnforceOrderLimit": "false"
+        "EnforceOrderLimit": "false",
+        "AWS_PROFILE": "devdsadmin",
+        "AWS_REGION": "eu-west-2"
       }
     }
   }
