--- a/book-a-reading-room-visit.web/package.json
+++ b/book-a-reading-room-visit.web/package.json
@@ -7,6 +7,12 @@
     "grunt": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-cli": "^6.26.0",
+    "babelify": "^10.0.0",
+    "core-js": "^3.10.1",
+    "grunt-browserify": "^6.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0"
