Minor changes to email templates

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -28,9 +28,9 @@
     "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
-    "FromAddress": "The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
+    "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
-    "ReservationSubject": "Reservation for {0}",
+    "ReservationSubject": "Reservation to visit The National Archives on {0}",
     "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
     "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order"
   }
