--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -25,13 +25,13 @@
   "AllowedHosts": "*",
   "EmailSettings": {
     "AutoCancelSubject": "Cancelled: Your visit to view documents at The National Archives",
-    "BulkOrderAddress": "gvillavarayar@nationalarchives.gov.uk",
+    "BulkOrderAddress": "Bulk.Orders@nationalarchives.gov.uk",
     "CancelSubject": "Cancelled: Your visit to view documents at The National Archives",
     "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
     "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
     "ReservationSubject": "Reservation to visit The National Archives on {0}",
-    "StandardOrderAddress": "gvillavarayar@nationalarchives.gov.uk",
+    "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
     "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order"
   }
 }
