--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -30,6 +30,7 @@
     "ConfirmationSubject": "Your visit on {0} with {1} document order is confirmed",
     "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
+    "PostVisitSubject": "Your booking for {0} : How was your visit?",
     "ReservationSubject": "Reservation to visit The National Archives on {0}",
     "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
     "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order"
