--- a/Dockerfile-api
+++ b/Dockerfile-api
@@ -2,7 +2,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:5.0-alpine AS base
 RUN apk add icu-libs
 ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 WORKDIR /app
-EXPOSE 80
+EXPOSE 8080
+ENV ASPNETCORE_URLS=http://*:8080
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-alpine AS build
 WORKDIR /src
