--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -1,7 +1,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-alpine AS base
 RUN apk add tzdata
 WORKDIR /app
-EXPOSE 80
+EXPOSE 8080
+ENV ASPNETCORE_URLS=http://*:8080
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-alpine AS build
 WORKDIR /src
