--- a/book-a-reading-room-visit.web/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.web/Properties/launchSettings.json
@@ -21,8 +21,7 @@
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
         "AWS_PROFILE": "devdsadmin",
-        "AWS_REGION": "eu-west-2",
-        "CutOffDate": "28/07/2021"
+        "AWS_REGION": "eu-west-2"
       }
     },
     "book_a_reading_room_visit.web": {
@@ -40,8 +39,7 @@
         "TimeZone": "GMT Standard Time",
         "EnforceOrderLimit": "false",
         "AWS_PROFILE": "devdsadmin",
-        "AWS_REGION": "eu-west-2",
-        "CutOffDate": "28/07/2021"
+        "AWS_REGION": "eu-west-2"
       }
     }
   }
