--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,14 +3,14 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
   workflow_dispatch:
 
 name: KBS Build and Push API & Web
 
 jobs:
-  deploy:
-    name: Deploy
+  Docker:
+    name: Docker
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +20,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.KBS_AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.KBS_AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-west-2
         role-to-assume: <UNKNOWN ATM>
         role-session-name: docker-build
