Added retry and delay logic for sending DSD emails in a loop.

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -34,6 +34,7 @@
     "PostVisitSubject": "Your booking for {0} : How was your visit?",
     "ReservationSubject": "Reservation to visit The National Archives on {0}",
     "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
-    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order"
+    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
+    "LoopSendDelay":  "10"
   }
 }
