Fixed email unit tests

--- a/book-a-reading-room-visit.test/book-a-reading-room-visit.test.csproj
+++ b/book-a-reading-room-visit.test/book-a-reading-room-visit.test.csproj
@@ -25,9 +25,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="test.runsettings">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="EmailTemplate\Text\AutomaticCancellation.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -43,10 +40,16 @@
     <None Update="EmailTemplate\Text\InvalidOrderReminder.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="EmailTemplate\Text\PostVisit.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="EmailTemplate\Text\ReservationConfirmation.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="EmailTemplate\Text\ValidOrderReminder.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="test.runsettings">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
