Added NLog logging to API.  Configured NLog to write messages to a Slack channel when erros occur on sending confirmation emails.

--- a/book-a-reading-room-visit.api/appsettings.Development.json
+++ b/book-a-reading-room-visit.api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "EmailSettings": {
-    "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@nationalarchives.gov.uk>",
-    "DSDFromAddress": "Book a visit - The National Archives <noreply@nationalarchives.gov.uk>",
+    "FromAddress": "Book a visit - The National Archives <bookareadingroomvisit@pro.gov.uk>",
+    "DSDFromAddress": "Book a visit - The National Archives <noreply@pro.gov.uk>",
     "InvalidReminderSubject": "Reminder from The National Archives: Complete your document order before the deadline",
     "PostVisitSubject": "Test : Your booking for {0} : How was your visit?",
     "ReservationSubject": "Test : Reservation to visit The National Archives on {0}",
