Additional email headers for DSD and Customer confirmation emails now specified in and read from appsettings.json configuration file.

--- a/book-a-reading-room-visit.api/appsettings.json
+++ b/book-a-reading-room-visit.api/appsettings.json
@@ -34,6 +34,16 @@
     "PostVisitSubject": "Your booking for {0} : How was your visit?",
     "ReservationSubject": "Reservation to visit The National Archives on {0}",
     "StandardOrderAddress": "AdvancedDocumentOrder@nationalarchives.gov.uk",
-    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order"
+    "ValidReminderSubject": "Reminder from The National Archives: Last chance to edit your document order",
+    "AdditionalHeaders": {
+      "DsdConfirmation": {
+        "X-SES-CONFIGURATION-SET": "KBSEmailsToDSD",
+        "X-SES-MESSAGE-TAGS": "booking-confirmation=adv-order"
+      },
+      "CustomerConfirmation": {
+        "X-SES-CONFIGURATION-SET": "KBSEmailsToDSD",
+        "X-SES-MESSAGE-TAGS": "booking-confirmation=adv-order"
+      }
+    }
   }
 }
