Removed the BST time zone label and updated the generic time messages

--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -22,6 +22,6 @@
     </target>
   </targets>
   <rules>
-    <logger name="*" minlevel="Info" writeTo="slackTarget" />
+    <logger name="*" minlevel="Error" writeTo="slackTarget" />
   </rules>
 </nlog>
