--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -24,7 +24,7 @@
     </target>
   </targets>
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="slackTarget" />
+    <logger name="*" minlevel="Error" writeTo="slackTarget" />
     <logger name="*" minlevel="Debug" writeTo="fileTarget" />
   </rules>
 </nlog>
