Changes to Nlog: (1) Added SQL Server logging and scripts to create database objects, (2) Amended Slack NLog to exclude interim email confirmation send attempt error messages.

--- a/book-a-reading-room-visit.api/Properties/launchSettings.json
+++ b/book-a-reading-room-visit.api/Properties/launchSettings.json
@@ -21,7 +21,8 @@
         "HomeURL": "https://dev-www.nationalarchives.gov.uk/book-a-reading-room-visit",
         "AWS_PROFILE": "devdsadmin",
         "AWS_REGION": "eu-west-2",
-        "KBS_SLACK_WEBHOOK": "https://hooks.slack.com/services/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"
+        "KBS_SLACK_WEBHOOK": "(redacted)",
+        "NLOG_SQL_CONNECTION": "Data Source= (localdb)\\MSSQLLocalDB;Initial Catalog=Logging;User Id=kbs_logger;Password=kbs_logger"
       }
     },
     "book_a_reading_room_visit.api": {
