--- a/book-a-reading-room-visit.api/nlog.config
+++ b/book-a-reading-room-visit.api/nlog.config
@@ -4,9 +4,6 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Error"
-      internalLogFile="C:\Temp\NLog\nlog-app.log"
-      nternalLogToConsole="true"
       >
 
   <extensions>
@@ -28,18 +25,23 @@
     </target>
     <target xsi:type="Database"
             name="sqlServerTarget"
-            connectionString ="Data Source= (localdb)\MSSQLLocalDB;Initial Catalog=Logging;User Id=kbs_logger;Password=kbs_logger"
-            commandText ="EXEC proc_insert_kbs_nlog_entry @message, @level, @exception, @stackTrace, @logger, @url">
-      <parameter name="@message" layout="${event-context:item=error-message}" />
-      <parameter name="@level" layout="${level}" />
-      <parameter name="@exception" layout="${exception}" />
-      <parameter name="@stackTrace" layout="${event-context:item=stack-trace}" />
+            connectionString ="(from environment variable)"
+            commandText ="EXEC proc_insert_kbs_nlog_entry @level,  @custom_message, @ex_message, @stack_trace, @exception_type, @logger, @url">
+      <parameter name="@level" layout="${level" />
+      <parameter name="@custom_message" layout="${message}" />
+      <parameter name="@ex_message" layout="${exception:format=message}" />
+      <parameter name="@stack_trace" layout="${exception:format=stackTrace}" />
+      <parameter name="@exception_type" layout="${exception:format=type}" />
       <parameter name="@logger" layout="${logger}" />
       <parameter name="@url" layout="${aspnet-request-url}" />     
     </target>
   </targets>
   <rules>
-    <logger name="*" minlevel="Error" writeTo="slackTarget" />
+    <logger name="*" minlevel="Error" writeTo="slackTarget" >
+      <filters defaultAction='Log'>
+        <when condition="contains('${message}','Will retry')" action="Ignore" />
+      </filters>
+    </logger>
     <logger name="*" minlevel="Error" writeTo="fileTarget" />
     <logger name="*" minlevel="Error" writeTo="sqlServerTarget" />
   </rules>
